Fix statement text alignment

--- a/frontend/src/components/LikertItem/LikertItem.css
+++ b/frontend/src/components/LikertItem/LikertItem.css
@@ -12,6 +12,7 @@
   color: #576071;
   font-weight: 600;
   font-family: 'Helvetica Neue', 'Open Sans', Arial;
+  text-align: center;
   margin: 10px 0px 10px;
 }
 
